2020-02-17

        * Version 1.7.0 released
        ========================

        Avoid rounding errors in GSkyMap operators (#3126)
        Add GObservations::npred() methods (#3062)
        Exclude upper edge boundary in GSkyMap::contains() method (#3012)
        Add GSkyMap::extract() methods (#2990)
        Add GCOMDri::cone_content() method (#2973)
        Add GCOMObservation::drm(GModels&) method (#2973)
        Implement methods to remove models from a response cache (#2973)
        Improve COMPTEL classes (#2973)
        Add GModelSpatial::flux() method (#2961)
        Change order of Python module import (#2961)
        Add GGti::overlap() method
        Correctly write model attributes in GCOMModelDRBFitting class
        Add GTime.datetime() method and add optional precision to GTime.utc() (#2909)
        Remove obsolete methods from GCTAResponseCache class (#2893)
        Allow RoI centres different from pointing direction in unbinned analysis
          (#2695)
        Add GSkyDir::moon() method (#1855)
        Add GSkyDir::sun(), GSkyDir::precess() and GTime::julian_epoch() methods
          (#1854)


2019-11-07

        * Bug fix version 1.6.3 released
        ================================

        Remove nested levels from CTA response cache to reduce memory requirements (#2893)


2019-07-15

        * Bug fix version 1.6.2 released
        ================================

        Set dependency library versions for conda build (#2958)


2019-06-05

        * Bug fix version 1.6.1 released
        ================================

        Fix initialisation script for c-shell (#2724)


2019-05-29

        * Version 1.6.0 released
        ========================

        Allow fitting of instrument scale factors (#2892)
        Add GCTAModelSpatialLookup class to handle CTA background lookups (#2878)
        Implement energy-dependent Gaussian CTA spatial background model (#2868)